--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
